# DocuLLM-Finetune

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: base.yaml
configs/data/: cord.yaml  funsd.yaml
configs/evaluation/: llm_judge.yaml  metrics.yaml
configs/prompts/: chain_of_thought.yaml  few_shot.yaml  zero_shot.yaml
configs/training/: qlora_qwen2vl_cord.yaml
docs/: ARCHITECTURE.md  PROMPT_ENGINEERING.md  RESULTS.md
notebooks/: 01_data_exploration.ipynb  02_prompt_engineering.ipynb  03_synthetic_data.ipynb  04_fine_tuning_colab.ipynb  05_evaluation_results.ipynb
scripts/: download_data.py  evaluate.py  generate_synthetic.py  prepare_dataset.py  run_pipeline.py  run_prompt_experiments.py  train.py
src/: config.py
src/data/: cord_loader.py  dataset_builder.py  format_converter.py  funsd_loader.py  synthetic_generator.py  utils.py
src/evaluation/: __init__.py  comparator.py  llm_judge.py  metrics.py  visualizer.py
src/inference/: __init__.py  postprocessor.py  predictor.py
src/prompts/: __init__.py  experiment_runner.py  strategies.py  templates.py
src/training/: __init__.py  callbacks.py  lora_config.py  model_loader.py  trainer.py
tests/: conftest.py  test_config.py  test_data_loading.py  test_format_converter.py  test_metrics.py  test_postprocessor.py
